Wed May 07 14:13:04 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* setup.py,testsuite/runtests.py,testsuite/unittests/,xappy/,
	  xappy/unittests/: Move doctests and unittests to separate
	  directories under xappy, make unittests into a module, and
	  incorporate running the unittests into the main testsuite runner.

Tue May 06 15:39:03 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* secore/,testsuite/runtests.py: Remove secore backwards
	  compatibility layer - we're about to break compatibility anyway,
	  so this will shortly be completely useless.

Tue Apr 29 08:25:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* MANIFEST.in,setup.py: Update setup.py and MANIFEST ready for 0.5
	  release.

Tue Apr 29 07:58:10 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Update scripts to
	  get custom version of xapian to latest version.

Mon Apr 28 23:25:46 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/: Add check that xapian is at at least version 1.0.6; raise
	  ImportError at import time if version is too old.  Add checks for
	  a version of xapian with sufficient features to support tags and
	  facets, and disable those features if they're not present: an
	  exception will be raised when tag or facet features are used if
	  the xapian version is too old.

Fri Apr 25 12:23:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/runtests.py: Copy fixes from xapian_1.0 branch to make
	  the testsuite pass on windows.

Thu Apr 17 23:07:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/unittests/freetext_1.py: New unit test for the
	  search_by_default and allow_field_specific fields.

Thu Apr 17 22:04:34 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,xappy/fieldactions.py,
	  xappy/searchconnection.py: Add allow_field_specific and
	  search_by_default flags to INDEX_FREETEXT action.
