@@ -1,3 +1,7 @@
+Wed May 07 14:25:54 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* testsuite/coverage.py: Update with changes from latest upstream.
+
 Wed May 07 14:13:04 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* setup.py,testsuite/runtests.py,testsuite/unittests/,xappy/,
